# A6-Naive-RAG-vs-Contextual-Retrieval

./: README.md  docker-compose.yml  pyproject.toml  st126235_assignment_6.ipynb
answer/: qa_pairs_raw.json  response-st126235-chapter-5.json
app/: Dockerfile  app.py  rag.py
index/: contextual_chunks.json  evaluation_results.json
index/contextual_faiss/: index.faiss  index.pkl
index/naive_faiss/: index.faiss  index.pkl
